# Conversion

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  deploy.yml  rust.yml
android/module1/values/: strings.xml
java/module1/: messages.properties
src/: bean.rs  form_xlsx.rs  lib.rs  main.rs  merge_xlsx.rs  to_excl.rs  to_xlsx.rs
test_res/: merge_test.xlsx
test_res/android/module2/values/: strings.xml
test_res/ios/module1/: Localizable.strings
test_res/ios/module2/: Localizable.strings
test_res/java/module2/: messages.properties
tests/: tests.rs
