[package]
name = "Conversion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
#xml-rs = "0.8.20"
serde = { version = "1.0.203", features = ["derive"] }
serde-xml-rs = "0.6.0"

rust_xlsxwriter = "0.68.0"
